--- a/.config/kitty/kitty-themes/01-Wallust.conf
+++ b/.config/kitty/kitty-themes/01-Wallust.conf
@@ -1,32 +1,32 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # /* wallust template - colors-kitty */
 
-foreground         #D7D6D2
-background         #000003
-cursor             #878B8C
+foreground         #D7D7D7
+background         #2F2F2F
+cursor             #939393
 
-active_tab_foreground     #000003
-active_tab_background     #D7D6D2
-inactive_tab_foreground   #D7D6D2
-inactive_tab_background   #000003
+active_tab_foreground     #2F2F2F
+active_tab_background     #D7D7D7
+inactive_tab_foreground   #D7D7D7
+inactive_tab_background   #2F2F2F
 
-active_border_color   #D7D6D2
-inactive_border_color #000003
-bell_border_color     #252D33
+active_border_color   #D7D7D7
+inactive_border_color #2F2F2F
+bell_border_color     #232323
 
-color0      #000003
-color1		#252D33
-color2		#293035
-color3		#2C353A
-color4		#2D363A
-color5		#545551
-color6		#6A685F
-color7		#BEBCB6
-color8		#85847F
-color9		#323C44
-color10		#374047
-color11		#3B474D
-color12		#3C484E
-color13		#70716C
-color14		#8D8A7E
-color15		#BEBCB6
+color0      #535353
+color1		#232323
+color2		#3B3B3B
+color3		#3E3E3E
+color4		#636363
+color5		#696969
+color6		#696969
+color7		#BDBDBD
+color8		#848484
+color9		#2F2F2F
+color10		#4F4F4F
+color11		#535353
+color12		#848484
+color13		#8C8C8C
+color14		#8C8C8C
+color15		#BDBDBD
