--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(000003)
-$foreground = rgb(D7D6D2)
-$color0 = rgb(000003)
-$color1 = rgb(252D33)
-$color2 = rgb(293035)
-$color3 = rgb(2C353A)
-$color4 = rgb(2D363A)
-$color5 = rgb(545551)
-$color6 = rgb(6A685F)
-$color7 = rgb(BEBCB6)
-$color8 = rgb(85847F)
-$color9 = rgb(323C44)
-$color10 = rgb(374047)
-$color11 = rgb(3B474D)
-$color12 = rgb(3C484E)
-$color13 = rgb(70716C)
-$color14 = rgb(8D8A7E)
-$color15 = rgb(BEBCB6)
+$background = rgb(2F2F2F)
+$foreground = rgb(D7D7D7)
+$color0 = rgb(535353)
+$color1 = rgb(232323)
+$color2 = rgb(3B3B3B)
+$color3 = rgb(3E3E3E)
+$color4 = rgb(636363)
+$color5 = rgb(696969)
+$color6 = rgb(696969)
+$color7 = rgb(BDBDBD)
+$color8 = rgb(848484)
+$color9 = rgb(2F2F2F)
+$color10 = rgb(4F4F4F)
+$color11 = rgb(535353)
+$color12 = rgb(848484)
+$color13 = rgb(8C8C8C)
+$color14 = rgb(8C8C8C)
+$color15 = rgb(BDBDBD)
