changed fish config

--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(2F2F2F)
-$foreground = rgb(D7D7D7)
-$color0 = rgb(535353)
-$color1 = rgb(232323)
-$color2 = rgb(3B3B3B)
-$color3 = rgb(3E3E3E)
-$color4 = rgb(636363)
-$color5 = rgb(696969)
-$color6 = rgb(696969)
-$color7 = rgb(BDBDBD)
-$color8 = rgb(848484)
-$color9 = rgb(2F2F2F)
-$color10 = rgb(4F4F4F)
-$color11 = rgb(535353)
-$color12 = rgb(848484)
-$color13 = rgb(8C8C8C)
-$color14 = rgb(8C8C8C)
-$color15 = rgb(BDBDBD)
+$background = rgb(181416)
+$foreground = rgb(CFB2B6)
+$color0 = rgb(3F3B3E)
+$color1 = rgb(190B15)
+$color2 = rgb(1A0A15)
+$color3 = rgb(1A0A15)
+$color4 = rgb(1D0C16)
+$color5 = rgb(551A22)
+$color6 = rgb(591B22)
+$color7 = rgb(B3898E)
+$color8 = rgb(7D6063)
+$color9 = rgb(220E1C)
+$color10 = rgb(220E1C)
+$color11 = rgb(220E1C)
+$color12 = rgb(270F1D)
+$color13 = rgb(72232D)
+$color14 = rgb(77242E)
+$color15 = rgb(B3898E)
