--- a/.config/kitty/kitty-themes/01-Wallust.conf
+++ b/.config/kitty/kitty-themes/01-Wallust.conf
@@ -1,32 +1,32 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # /* wallust template - colors-kitty */
 
-foreground         #D7D7D7
-background         #2F2F2F
-cursor             #939393
+foreground         #CFB2B6
+background         #181416
+cursor             #796069
 
-active_tab_foreground     #2F2F2F
-active_tab_background     #D7D7D7
-inactive_tab_foreground   #D7D7D7
-inactive_tab_background   #2F2F2F
+active_tab_foreground     #181416
+active_tab_background     #CFB2B6
+inactive_tab_foreground   #CFB2B6
+inactive_tab_background   #181416
 
-active_border_color   #D7D7D7
-inactive_border_color #2F2F2F
-bell_border_color     #232323
+active_border_color   #CFB2B6
+inactive_border_color #181416
+bell_border_color     #190B15
 
-color0      #535353
-color1		#232323
-color2		#3B3B3B
-color3		#3E3E3E
-color4		#636363
-color5		#696969
-color6		#696969
-color7		#BDBDBD
-color8		#848484
-color9		#2F2F2F
-color10		#4F4F4F
-color11		#535353
-color12		#848484
-color13		#8C8C8C
-color14		#8C8C8C
-color15		#BDBDBD
+color0      #3F3B3E
+color1		#190B15
+color2		#1A0A15
+color3		#1A0A15
+color4		#1D0C16
+color5		#551A22
+color6		#591B22
+color7		#B3898E
+color8		#7D6063
+color9		#220E1C
+color10		#220E1C
+color11		#220E1C
+color12		#270F1D
+color13		#72232D
+color14		#77242E
+color15		#B3898E
