--- a/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -6,7 +6,7 @@ $UserScripts = $HOME/.config/hypr/UserScripts
 $wallDIR=$HOME/Pictures/wallpapers
 $lock = $scriptsDir/LockScreen.sh
 $SwwwRandom = $UserScripts/WallpaperAutoChange.sh
-$livewallpaper="$HOME/Pictures/wallpapers/wallpapers/Lazy River.mp4"
+$livewallpaper="$HOME/Pictures/wallpapers/wallpapers/nazuna.mp4"
 
 # wallpaper stuff 
 exec-once = swww-daemon --format xrgb
