--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -3,6 +3,7 @@ confirm-close-surface = false
 
 ## Commands
 ##command = /usr/bin/nu
+command = /usr/bin/fish
 
 ## Clipboard
 clipboard-read = "allow"
@@ -13,7 +14,7 @@ background-opacity = 0.7
 
 ## Theme
 ##theme = Arthur
-theme = CutiePro
+theme = Cutie Pro
 font-family = MesloLGS Nerd Font
 font-size = 14
 background = #000000
