--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -1,14 +1,10 @@
-# /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
-# This is where you put your own keybinds. Be Mindful to check as well ~/.config/hypr/configs/Keybinds.conf to avoid conflict
-# if you think I should replace the Pre-defined Keybinds in ~/.config/hypr/configs/Keybinds.conf , submit an issue or let me know in DC and present me a valid reason as to why, such as conflicting with global shortcuts, etc etc
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more settings and variables
 # See also Laptops.conf for laptops keybinds 
 
 # /* ---- ✴️ Variables ✴️ ---- */  #
 $mainMod = SUPER
 $files = thunar
 $term = kitty
+$altTerm = ghostty
 $scriptsDir = $HOME/.config/hypr/scripts
 $UserScripts = $HOME/.config/hypr/UserScripts
 
@@ -18,6 +14,7 @@ bind = $mainMod, D, exec, pkill rofi || true && rofi -show drun -modi drun,fileb
 bind = $mainMod, B, exec, xdg-open "https://"  # default browser
 bind = $mainMod, A, exec, pkill rofi || true && ags -t 'overview' # desktop overview (if installed)
 bind = $mainMod, Return, exec, $term  #terminal
+bind = $mainMod ALT, Return, exec, $altTerm  #alternate terminal
 bind = $mainMod, E, exec, $files #file manager
 
 
